@@ -214,10 +214,10 @@ class MNS_Payment_Gateway_QR extends WC_Payment_Gateway
             wc_add_notice(__(MNS_NOTICE_ERROR_CONTINUE, $this->domain), 'error');
         }
 
-        if (strlen($message_ins) > 150) {
-            wc_add_notice(__("Message to the store (150 characters maximum)", $this->domain), 'error');
-            return;
-        }
+        // if (strlen($message_ins) > 150) {
+        //     wc_add_notice(__("Message to the store (150 characters maximum)", $this->domain), 'error');
+        //     return;
+        // }
 
         $body_post = set_body($order_id, $order, $gateways, $order_amount, $items_msg, $MNS_special_instructions_to_merchant, $ms_fee, $ms_time);
         $ms_body = set_req_message($ms_secret_id, $ms_secret_key, $body_post, "qrnone", $return_url);
