@@ -1,6 +1,7 @@
 == Changelog ==
 = 1.0.0 - 2022-05-04 =
 
+* 2022-06-28 : fix bug checking qrnone status from api
 * 2022-05-30 : fix bug qrnone not rendering
 * 2022-05-04 : fix bug qrnone not redirect after payment success and add option stock reduce in admin config
 * 2022-04-18 : add log data for investigated and update payment api
